HTML: Actualizei o artigo 'Sobre' e 'Ajuda' (sobretudo Esvaziar ficha). CSS: Defini uma hierarquia de z-index para os elementos com position fixed. JS: Modifiquei o métodos do menu (Realçar totais, Esvaziar e Imprimir ficha), de backup da ficha na Local Storage e de totalização acrescentando variáveis e definindo nomes mais sugestivos.

--- a/estetica/ficha.css
+++ b/estetica/ficha.css
@@ -29,7 +29,7 @@
     position: absolute;
     top: -36px;
     left: -114px;
-    z-index: 4000;
+    z-index: 333;
 }
 
 .ficha__moldura-de-emblema {
